<resources>
    <string name="app_name">CL Business live</string>
    <string name="app_heading">ChatLocaly Business</string>
    <string name="app_version">Version 1.0.2</string>
       <string name="appLogicApplicationKey">f7795dc359c99991ff22f1623a2875e2</string>
    <string name="map_key">AIzaSyBYtEiHsfZaP6CSQ-8oMsOpDAbOcJlO3gY</string>
    <string name="str_adminContact">Admin Phone Number</string>
    <string name="str_welcome">Welcome To ChatLocaly Business</string>
    <string name="app_tagline">Take your business to new heights</string>
    <string name="str_getstarted">Get Started</string>
    <string name="str_joinnow">Join Now</string>
    <string name="str_continue">CONTINUE</string>
    <string name="str_enterpromo">Enter Promo Code</string>
    <string name="str_enterconfirmationcode">Enter bill payment confirmation code</string>
    <string name="str_enterphone">Enter Phone Number</string>
    <string name="str_enterpaytmphone">Enter PayTm Registered Number!</string>
    <string name="str_enteradminPhone">Enter Admin Mobile</string>
    <string name="str_enterotp">Enter OTP</string>
    <string name="str_enterPassword">Enter Password</string>
    <string name="str_allready_member">ALREADY A MEMBER?</string>
    <string name="str_not_member">NOT A MEMBER?</string>
    <string name="str_promoLine">Enter JOINNOW to get free premium membership for 3 months</string>
    <string name="str_congoLine">Congratulations , you get free premium membership for 1 year </string>
    <string name="str_loginAs">Log In As</string>
    <string name="str_admin">ADMIN</string>
    <string name="str_subadmin">SUB ADMIN</string>
    <string name="str_worker">WORKER</string>
    <string name="str_takePhoto">Take Photo</string>
    <string name="str_chooseGallery">CHOOSE FROM GALLERY</string>
    <string name="str_nxt">NEXT</string>
    <string name="str_done">DONE</string>
    <string name="str_Submit">Submit</string>
    <string name="str_whomyousend">Whom do you want to send?</string>
    <string name="str_Buyrsinfo">Buyer Name</string>
    <string name="str_shippinginfo">Shipping Information</string>
    <string name="str_discription">Discription</string>
    <string name="str_date">Bill Date</string>
    <string name="str_duedate">Due Date</string>
    <string name="str_itemDetail">Item Detail</string>
    <string name="str_privacyPolicy">Privacy Policy</string>
    <string name="str_and">And</string>
    <string name="str_terms">Terms of Use</string>
    <string name="str_verifyNumber">Verify Phone Number</string>
    <string name="str_verification">Verification Password</string>
    <string name="str_adminNumber">Admin Phone Number</string>
    <string name="str_otpverifyLine">A text message was sent to </string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="str_resend">RESEND</string>
    <string name="str_yourprofile">Your Profile</string>
    <string name="str_profileTagLine">Please provide your name and an optional profile photo </string>
    <string name="str_businessProfile">Business Info </string>
    <string name="str_mandatoryalert">Please provide mandatory details marked with</string>
    <string name="str_enterbusinessname">Enter your Business name</string>
    <string name="str_businessicon">Business Icon :</string>
    <string name="str_businessName">Business Name :</string>
    <string name="str_homeservice">Home Service :</string>
    <string name="str_kilometers">Kilometers :</string>
    <string name="str_subscriptionplan">Subscription Plan :</string>
    <string name="str_country">Country :</string>
    <string name="str_city">City :</string>
    <string name="str_localtiy">Locality :</string>
    <string name="str_pincode">Pin Code :</string>
    <string name="str_Address">Address :</string>
    <string name="str_landmark">Landmark :</string>
    <string name="str_type">Type</string>
    <string name="str_skip">SKIP</string>
    <string name="str_finish">FINISH</string>
    <string name="str_select">Select</string>
    <string name="str_receivePAymentVia">Receive Payment Via</string>
    <string name="str_paytm_numberSuggestion">When someone sends money via paytm. It will be accepted on this number </string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="Str_Tag_Menu">Tag Chat</string>
    <string name="Str_unmute_Menu">Unmute Chat</string>
    <string name="Str_block_Menu">Block Chat</string>
    <string name="Str_remove_Menu">Delete Chat</string>
    <string name="Str_editBusinessInfo">Edit Business Info</string>
    <string name="Str_editOverview">Edit Overview</string>
    <string name="Str_addProduct">Add Product</string>
    <string name="Str_addServices">Add Service</string>
    <string name="Str_ProductName">Max 70 Character</string>
    <string name="Str_ServiceName">Service Name</string>
    <string name="Str_Price">Price</string>
    <string name="Str_SKU">SKU</string>
    <string name="Str_DiscountType">Discount</string>
    <string name="Str_status">Status</string>
    <string name="str_blocked">Blocked</string>
    <string name="str_info">Info</string>
    <string name="str_plans">Plans</string>
    <string name="str_payment">Payment</string>
    <string name="str_blockedStats">Blocked Stats</string>
    <string name="str_internal">Internal</string>
    <string name="str_subscriptionInfo">Subscription Info </string>
    <string name="str_reports">Reports</string>
    <string name="str_subscriptionPlans">Subscription Plans </string>
    <string name="str_subscription">Subscription</string>
    <string name="str_settings">Settings</string>
    <string name="str_products">Product</string>
    <string name="str_Services">Service</string>
    <string name="str_Appeal">Appeal</string>
    <string name="str_yourID">Your Id</string>
    <string name="str_Selected">Selected Image</string>
    <string name="str_chooseImage">Choose Image</string>
    <string name="str_enableIcon">Enable to show business icon in bill</string>
    <string name="str_enableLocation">Enable to show business location in bill</string>
    <string name="str_check_internet_connection">Please check internet!</string>
    <string name="str_something_went_wrong">something went wrong</string>
    <string name="str_noone_response">No response yet</string>
    <string name="str_permission_denied">Permission denied by business admin</string>
    <string name="str_addProductAlert">Add Products to your business profile</string>
    <string name="str_addServiceAlert">Add Services to your business profile</string>
    <string name="str_customer_blocked">Customer Blocked</string>
    <string name="str_customer_unblocked">Customer Unblocked</string>
    <string name="str_customer_taged">Customer Taged</string>
    <string name="str_customer_untaged">Customer Untaged</string>
    <string name="album_view">Select photo album</string>
    <string name="image_view">Tap to select images</string>
    <string name="add">ADD</string>
    <string name="selected">selected</string>
    <string name="limit_exceeded">Can select a maximum of %d images</string>
    <string name="error_null_cursor">Oops, something went wrong!</string>
    <string name="permission_info">App requires permission to Storage to view images.</string>
    <string name="permission_force">App requires permission to Storage to view images. Tap Settings and go to Permissions to grant permission.</string>
    <string name="permission_ok">OK</string>
    <string name="permission_settings">Settings</string>
    <string name="permission_package">package</string>
    <string-array name="state_list">
        <item>Andaman and Nicobar Islands</item>
        <item>Andhra Pradesh</item>
        <item>Arunachal Pradesh</item>
        <item>Assam</item>
        <item>Bihar</item>
        <item>Chandigarh</item>
        <item>Chhattisgarh</item>
        <item>Dadra and Nagar Haveli</item>
        <item>Daman and Diu</item>
        <item>Delhi</item>
        <item>Goa</item>
        <item>Gujarat</item>
        <item>Haryana</item>
        <item>Himachal Pradesh</item>
        <item>Jammu and Kashmir</item>
        <item>Jharkhand</item>
        <item>Karnataka</item>
        <item>Kerala</item>
        <item>Lakshadweep</item>
        <item>Madhya Pradesh</item>
        <item>Maharashtra</item>
        <item>Manipur</item>
        <item>Meghalaya</item>
        <item>Mizoram</item>
        <item>Nagaland</item>
        <item>Orissa</item>
        <item>Pondicherry</item>
        <item>Punjab</item>
        <item>Rajasthan</item>
        <item>Sikkim</item>
        <item>Tamil Nadu</item>
        <item>Telangana</item>
        <item>Tripura</item>
        <item>Uttaranchal</item>
        <item>Uttar Pradesh</item>
        <item>West Bengal</item>
    </string-array>
    <string-array name="unit_list">

        <item>none</item>
        <item>mt.</item>
        <item>lt.</item>
        <item>ml.</item>
        <item>kg.</item>
        <item>lb.</item>
        <item>ft.</item>
        <item>doz.</item>
        <item>gal.</item>
        <item>gram</item>
        <item>mg.</item>
        <item>custom</item>
    </string-array>
    <string-array name="sales_by_array">
        <item>Earnings by month</item>
        <item>Earnings by quarter</item>
        <item>Earnings by customer</item>

    </string-array>
    <string-array name="years_list">
        <item>2002</item>
        <item>2003</item>
        <item>2004</item>
        <item>2005</item>
        <item>2006</item>
        <item>2007</item>
        <item>2008</item>
        <item>2009</item>
        <item>2010</item>
        <item>2011</item>
        <item>2012</item>
        <item>2013</item>
        <item>2014</item>
        <item>2015</item>
        <item>2016</item>
        <item>2017</item>
        <item>2018</item>
        <item>2019</item>
        <item>2020</item>
        <item>2021</item>

    </string-array>
    <string-array name="month_list">
        <item>All</item>
        <item>January</item>
        <item>Fabruary</item>
        <item>March</item>
        <item>April</item>
        <item>May</item>
        <item>June</item>
        <item>July</item>
        <item>August</item>
        <item>September</item>
        <item>October</item>
        <item>November</item>
        <item>December</item>
    </string-array>
</resources>