<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_tag"
        android:orderInCategory="100"
        android:title="@string/Str_Tag_Menu"
        app:showAsAction="never"
        />
    <item
        android:id="@+id/action_unmute"
        android:orderInCategory="100"
        android:title="@string/Str_unmute_Menu"
        app:showAsAction="never"
        />
    <item
        android:id="@+id/action_block"
        android:orderInCategory="100"
        android:title="@string/Str_block_Menu"
        app:showAsAction="never"
        />
    <item
        android:id="@+id/action_remove"
        android:orderInCategory="100"
        android:title="@string/Str_remove_Menu"
        app:showAsAction="never"
        />
</menu>