<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#fff">

    <ImageView
        android:layout_width="@dimen/dimen100"
        android:layout_height="@dimen/dimen100"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/dimen60"
        android:src="@mipmap/logo"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_heading"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/dimen30"
        android:textSize="@dimen/dimen20"
        android:textColor="@color/lightblack"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/str_loginAs"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/dimen30"
        android:textSize="@dimen/textsize16"
        android:gravity="center"
        android:lineSpacingExtra="5dp"
        android:textColor="@color/gray"
        />
    <Button
        android:id="@+id/btn_adminLogin"
        android:layout_width="@dimen/dimen120"
        android:layout_height="40dp"
        android:text="@string/str_admin"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/dimen20"
        android:textSize="@dimen/textsize14"
        android:background="@drawable/blue_btn_bg"
        android:textColor="@color/white"
        />  <Button
        android:id="@+id/btn_subAdminLogin"
        android:layout_width="@dimen/dimen120"
        android:layout_height="40dp"
        android:text="@string/str_subadmin"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/dimen20"
        android:textSize="@dimen/textsize14"
        android:background="@drawable/blue_btn_bg"
        android:textColor="@color/white"
        />
    <Button
        android:id="@+id/btn_workerLogin"
        android:layout_width="@dimen/dimen120"
        android:layout_height="40dp"
        android:text="@string/str_worker"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/dimen20"
        android:textSize="@dimen/textsize14"
        android:background="@drawable/blue_btn_bg"
        android:textColor="@color/white"
        />
    <TextView
        android:id="@+id/tv_notMember"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/str_not_member"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/dimen30"
        android:textSize="@dimen/textsize16"
        android:gravity="center"
        android:textColor="@color/themeColor"
        />
</LinearLayout>

</RelativeLayout>