<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:id="@+id/rl_main">
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">
<TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/str_yourprofile"
    android:gravity="center"
    android:layout_marginTop="@dimen/dimen30"
    android:textSize="@dimen/textsize20"
    android:textColor="@color/black"
    />
    <TextView
        android:id="@+id/tv_otpverifyLine"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/str_profileTagLine"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/dimen20"
        android:textSize="@dimen/textsize16"
        android:textColor="@color/light_gray"
        android:gravity="center"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <com.chatlocalybusiness.ui.CircleImageView
            android:id="@+id/iv_profilePic"
            android:layout_width="@dimen/dimen80"
            android:layout_height="@dimen/dimen80"
            android:src="@drawable/user_icon"
            android:layout_marginLeft="@dimen/dimen20"
            />
        <EditText
            android:id="@+id/et_userName"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="@dimen/dimen10"
            android:hint="Enter your name"
            android:textColorHint="@color/light_gray"
            android:paddingLeft="@dimen/dimen10"
            android:theme="@style/EditTextTheme"
            android:inputType="textCapWords"
            android:maxLines="1"
            />

       </LinearLayout>

    <Button
        android:id="@+id/btn_takePhoto"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:text="@string/str_takePhoto"
        android:background="@drawable/blue_btn_bg"
        android:textColor="@color/white"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/dimen20"
        />
     <TextView
        android:id="@+id/tv_chooseGallery"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/str_chooseGallery"
        android:textColor="@color/themeColor"
        android:layout_gravity="center"
         android:gravity="center"
        android:layout_marginTop="@dimen/dimen20"
        android:textSize="@dimen/textsize16"
         android:padding="@dimen/dimen10"
         />
      <Button
        android:id="@+id/btn_next"
        android:layout_width="80dp"
        android:layout_height="40dp"
        android:text="@string/str_nxt"
        android:background="@drawable/gray_btn_bg"
        android:textColor="@color/light_gray"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/dimen20"
        android:clickable="false"
        android:focusable="false"
        />
</LinearLayout>
    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_centerInParent="true"
        android:visibility="gone"
        />
</RelativeLayout>
