<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    >
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:scrollbars="none"
    >
<LinearLayout
     android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.chatlocalybusiness.activity.GetStartedActivity"
    android:background="#fff">

    <ImageView
        android:layout_width="@dimen/dimen100"
        android:layout_height="@dimen/dimen100"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/dimen60"
        android:src="@mipmap/logo"
        />
    <com.chatlocalybusiness.textview.TextViewReguler
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_heading"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/dimen30"
        android:textSize="@dimen/textsize22"
        android:textColor="@color/lightblack"

        />
    <com.chatlocalybusiness.textview.TextViewReguler
        android:id="@+id/tv_congoLine"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/str_promoLine"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/dimen20"
        android:textSize="@dimen/textsize18"
        android:gravity="center"
        android:paddingLeft="@dimen/dimen20"
        android:paddingRight="@dimen/dimen20"
        android:lineSpacingExtra="5dp"
        android:textColor="@color/gray"
        />
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/dimen20"
    android:layout_marginLeft="@dimen/dimen20"
    android:layout_marginRight="@dimen/dimen20"
    android:background="@drawable/promo_bg"
    android:elevation="@dimen/dimen3"
    android:orientation="horizontal"
    >
    <EditText
        android:id="@+id/et_promocode"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen40"
        android:gravity="center"
        android:hint="@string/str_enterpromo"
        android:textColorHint="#DDDD"
        android:layout_weight="1"
        android:layout_marginRight="@dimen/dimen10"
        android:backgroundTint="#0000"
        android:inputType="text"
        android:maxLines="1"
        />
    <ImageView
        android:id="@+id/iv_checkIcon"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginRight="@dimen/dimen10"
        android:src="@drawable/check"
        android:layout_gravity="center_vertical"
        android:visibility="gone"
        />
</LinearLayout>

    <Button
        android:id="@+id/btn_joinNow"
        android:layout_width="@dimen/dimen120"
        android:layout_height="40dp"
        android:text="@string/str_joinnow"
        android:layout_gravity="center"
        android:textSize="@dimen/textsize14"
        android:layout_marginTop="@dimen/dimen80"
        android:textColor="@color/light_gray"
        android:clickable="false"
        android:background="@drawable/gray_btn_bg"
        android:focusable="false"
        />

    <TextView
        android:id="@+id/tv_alreadyMember"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/str_allready_member"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/dimen20"
        android:textSize="@dimen/textsize16"
        android:gravity="center"
        android:visibility="gone"
        android:lineSpacingExtra="5dp"
        android:textColor="@color/themeColor"
        />
</LinearLayout>
</ScrollView>
    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_centerInParent="true"
        android:visibility="gone"
        />

</RelativeLayout>
