<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
             >

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.chatlocalybusiness.activity.GetStartedActivity"
    android:background="#fff">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/str_verification"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/dimen30"
        android:textSize="@dimen/textsize18"
        android:textColor="@color/black"
        />
    <TextView
        android:id="@+id/tv_otpverifyLine"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="A text message was sent to admin's phone "
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/dimen10"
        android:textSize="@dimen/textsize16"
        android:textColor="@color/light_gray"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen20"
        android:layout_marginLeft="@dimen/dimen20"
        android:layout_marginRight="@dimen/dimen20"
        android:background="@drawable/promo_bg"
        android:elevation="@dimen/dimen3"
        android:orientation="horizontal"
        >
        <EditText
            android:id="@+id/et_otp"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen40"
            android:gravity="center"
            android:hint="@string/str_enterotp"
            android:textColorHint="#DDDD"
            android:inputType="number"
            android:backgroundTint="#0000"
            android:maxLength="6"
            />
        <ImageView
            android:id="@+id/iv_checkIcon"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginRight="@dimen/dimen10"
            android:src="@mipmap/ic_launcher"
            android:layout_gravity="center_vertical"
            android:visibility="gone"
            />
    </LinearLayout>

    <Button
        android:id="@+id/btn_continueLogin"
        android:layout_width="@dimen/dimen120"
        android:layout_height="40dp"
        android:text="@string/str_continue"
        android:layout_gravity="center"
        android:textSize="@dimen/textsize14"
        android:layout_marginTop="@dimen/dimen40"
        android:textColor="@color/light_gray"
        android:clickable="false"
        android:background="@color/grey"
        android:focusable="false"
        />
</LinearLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="@dimen/dimen50"
        android:layout_height="@dimen/dimen50"
        android:layout_centerInParent="true"
        android:visibility="gone"
        />
</RelativeLayout>